// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen renders LoginPane when SSO is enabled 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="single_sign_on_notice"
    >
      ssoEnabled
    </div>
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="false"
        data-showpassword="false"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders LoginPane when has database connection 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="true"
        data-showpassword="true"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders LoginPane when has enterprise connection 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="false"
        data-showpassword="false"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders LoginSignUpTabs when database connection is enabled and has screen signUp 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="login_sign_up_tabs"
      data-lock="model"
      data-loginlabel="loginLabel"
      data-signuplabel="signUpLabel"
      data-signuplink="false"
    />
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="true"
        data-showpassword="true"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders LoginSignUpTabs when social connection is enabled and has initial screen signUp and has screen signUp 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="true"
        data-showpassword="true"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders SingleSignOnNotice when SSO is enabled 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="single_sign_on_notice"
    >
      ssoEnabled
    </div>
    <div>
      <div
        data-__type="login_pane"
        data-emailinputplaceholder="emailInputPlaceholder"
        data-forgotpasswordaction="forgotPasswordAction"
        data-i18n="[object Object]"
        data-instructions="databaseEnterpriseLoginInstructions"
        data-lock="model"
        data-passwordinputplaceholder="passwordInputPlaceholder"
        data-showforgotpasswordlink="false"
        data-showpassword="false"
        data-usernameinputplaceholder="usernameInputPlaceholder"
        data-usernamestyle="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders SocialButtonsPane when has social connections 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="social_buttons_pane"
        data-instructions="socialLoginInstructions"
        data-lock="model"
        data-showloading="false"
        data-signup="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginScreen renders empty div by default 1`] = `
<DocumentFragment>
  <div>
    <div />
  </div>
</DocumentFragment>
`;
